# claude-code-ai-skills

./: .gitignore  CLAUDE.md  GEMINI.md  SKILL.md  article-claude-skills.md  setup-skills.sh
.claude/skills/cbs-analyzer/: CREDITS.md  SKILL.md  analyze_absence.py  analyze_births_deaths.py  analyze_energy_crossover.py  analyze_energy_simple.py  analyze_population_overview.py  quick_overview.py
.claude/skills/container-sandboxes/: .gitignore  CREDITS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  README.md  SKILL.md
.claude/skills/container-sandboxes/sandbox_cli/: README.md  pyproject.toml
.claude/skills/container-sandboxes/sandbox_cli/src/: __init__.py  config.py  main.py
.claude/skills/container-sandboxes/sandbox_cli/src/commands/: __init__.py  browser.py  exec.py  files.py  sandbox.py
.claude/skills/container-sandboxes/sandbox_cli/src/modules/: __init__.py  client.py  commands.py  files.py  sandbox.py
.claude/skills/container-sandboxes/sandbox_cli/tests/: __init__.py  conftest.py  test_commands.py  test_files.py  test_integration.py  test_sandbox.py
.claude/skills/docs-manager/: SKILL.md
.claude/skills/honest-feedback/: SKILL.md
.claude/skills/k8s-metrics/: SKILL.md  example-usage.md
.claude/skills/session-memory/: SKILL.md
data/83130NED/: data.parquet  metadata.json
data/cache/: cache.db
docs/: getting-started.md
docs/architecture/: components.md  overview.md
docs/guides/: setup-project.md
memories/: memory-status.md
memories/sessions/2025-11/: 2025-11-13-1446-initial-skills-setup.md  2025-11-13-2046-restructure-skills-format.md
(+17 files in other folders)
